--- a/resources/data/json/databaseFirebase.json
+++ b/resources/data/json/databaseFirebase.json
@@ -4,7 +4,7 @@
 			"AlliesAndOrganizations": "",
 			"antecedent": "",
 			"antecedentTraces": {
-				"Personality": "",
+				"personality": "",
 				"connections": "",
 				"defects": "",
 				"ideals": ""   
@@ -27,11 +27,11 @@
 			"equipments": {
 			"desc": [""],
 			"money": {
-				"PC": "",
-				"PP": "",
-				"PE": "",
-				"PO": "",
-				"PL": ""
+				"pc": "",
+				"pp": "",
+				"pe": "",
+				"po": "",
+				"pl": ""
 			}  
 			},
 			"history": "",
