--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-render-html": "^3.10.0",
+    "react-native-uuid": "^1.4.9",
     "react-navigation": "^2.12.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
