--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "remote-redux-devtools": "^0.5.13"
+  },
+  "rnpm": {
+    "assets": [
+      "./src/assets/fonts/"
+    ]
   }
 }
