--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "firebase": "^5.4.2",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-elements": "^0.19.1",
+    "react-native-popup-menu": "^0.14.0",
     "react-native-render-html": "^3.10.0",
     "react-native-uuid": "^1.4.9",
     "react-navigation": "^2.12.1",
